crates/usfm_parser/tests/snapshots/recovery__periph_inside_a_sidebar.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\esb\n\\periph T\n\\p x\n\\esbe\n\\p after"
---
Sidebar esb@0..25
  Periph periph@5..20 title="T"@13..15
    Para p@15..20
      Text "x"@18..20
Para p@26..34
  Text "after"@29..34
